--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,26 @@
 version: '3.6'
 
 services:
-  jonkkins-login:
-    build: modules/login
+  svc:
+    build: .
     restart: unless-stopped
     ports:
-      - 2001:80
+      - 3001:80
     volumes:
-      - ./modules/login/src:/app
-  front:
-    build: front
-    ports:
-      - 998:80
-    volumes:
-      - ./front/error:/home/error
-      - ./front/pages:/home/pages
-  nosql:
+      - ./src:/app
+      - ./html:/html
+  svc-nosql:
     image: 'mongo:4.2.3-bionic'
     environment:
-      - MONGO_INITDB_ROOT_PASSWORD_FILE=/run/secrets/mongo_rootpw
+      - MONGO_INITDB_ROOT_PASSWORD=root
       - MONGO_INITDB_ROOT_USERNAME=root
-    volumes:
-      - './docker/mongo/secrets:/run/secrets'
-  nosql-express:
+  svc-nosql-express:
     image: mongo-express
     ports:
-      - 2002:8081
+      - 3002:8081
     environment:
       - ME_CONFIG_BASICAUTH_USERNAME=admin
       - ME_CONFIG_BASICAUTH_PASSWORD=admin
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=Kks2DkqjaSmm
-      - ME_CONFIG_MONGODB_SERVER=nosql
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+      - ME_CONFIG_MONGODB_SERVER=svc-nosql
